--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,10 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="FullScreenTheme" parent="AppTheme">
-        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowActionBar">false</item>
+        <item name="android:windowDisablePreview">true</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     <!--自定义dialog -->
