--- a/app/src/main/res/layout/layout_item_home_banner.xml
+++ b/app/src/main/res/layout/layout_item_home_banner.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.autolayout.AutoLinearLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,4 +18,4 @@
         app:indicator_margin="20px"
         app:indicator_width="20px"
         app:scroll_time="800"/>
-</com.zhy.autolayout.AutoLinearLayout>
+</LinearLayout>
